--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <script type="text/javascript" src="https://api.map.baidu.com/api?v=1.0&&type=webgl&ak=y1AS7qduaF1vCPKqRQ2cxcYv73pfsdqU"></script>
     <title><%= htmlWebpackPlugin.options.title %></title>
+      <!-- 引入重置样式 -->
+    <link rel="stylesheet" href="./reset.css">
   </head>
   <body>
     <noscript>
